Aggiunta la classe Launcher per eseguire per far partire il fat jar correttamente